# C

./: CMakeLists.txt  DIRECTORY.md  dir_bb1b521853a9c46347182a9d10420771.html  doge  files.html  globals_func_m.html  globals_func_o.html  globals_func_s.html  globals_func_t.html  globals_m.html  globals_o.html  globals_s.html  globals_t.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  navtreeindex3.js  navtreeindex4.js
.github/workflows/: awesome_workflow.yml
client_server/: CMakeLists.txt  fork.c  fork.h  remote_command_exec_udp_client.c  remote_command_exec_udp_server.c  tcp_full_duplex_client.c  tcp_full_duplex_server.c  tcp_half_duplex_client.c  tcp_half_duplex_server.c
client_server/scilab/: forkWindows.c
d5/d88/: md__d_i_r_e_c_t_o_r_y.html
include/scilab/: CMakeLists.txt  forkwindows.h
scilab/: CMakeLists.txt  forkwindows.c  forkwindows.h
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+107 more)
searching/: exponential_search.c
